src/assets/scss/App.scss
@import "./vars";

* {
    box-sizing: border-box;
}

body {
    font-family: $body-font;
    font-size: 15px;
    font-weight: 700;
    margin: 0;
    padding: 0;
}

.pricing {
    background-color: $gray-blue-v-light;
    padding: 4.25rem 1.25rem;
    position: relative;
    text-align: center;
    
    &::before {
        background: url('../images/bg-top.svg') center no-repeat;
        background-size: contain;
        content: '';
        display: inline-block;
        position: absolute;
        height: 620px;
        right: -10rem;
        top: -2.5rem;
        width: 100%;

        @media (min-width: 640px) {
            right: -21rem;
        }

        @media (min-width: 1024px) {
            height: 660px;
            right: 0;
            top: 0;
            width: 376px;
        }
    }
    
    @media (min-width: 1024px) {
        padding: 4.5rem 1.25rem;

        &::after {
            background: url('../images/bg-bottom.svg') center no-repeat;
            background-size: contain;
            content: '';
            display: inline-block;
            position: absolute;
            height: 306px;
            left: 0;
            bottom: 0;
            width: 355px;
        }
    }

    &__title {
        color: $gray-blue-dark;
        font-size: 2rem;
        margin: 0;
        position: relative;
        z-index: 2;
    }

    &-toggle {
        align-items: center;
        display: flex;
        flex-wrap: nowrap;
        justify-content: center;
        padding: 2.5rem 0 5rem;
        position: relative;
        z-index: 2;

        @media (min-width: 1024px) {
            padding-bottom: 4rem;
        }

        &__label {
            color: $gray-blue-light;
            display: inline-block;
            margin: 0;
        }

        &__btn {
            background: linear-gradient(to right, $gradient-light, $gradient-dark);
            border: none;
            border-radius: 1rem;
            cursor: pointer;
            height: 2rem;
            margin: 0 1.5rem;
            position: relative;
            width: 3.5rem;

            &:after {
                background-color: $white;
                border-radius: 50%;
                content: "";
                display: inline-block;
                height: 1.5rem;
                position: absolute;
                right: 4px;
                top: 4px;
                transition: transform 75ms linear;
                width: 1.5rem;
            }

            &.monthly {
                &:after {
                    transform: translateX(0);
                }
            }

            &.annually {
                &:after {
                    transform: translateX(-23px);
                }
            }
        }
    }
}

.plans {
    @media (min-width: 1024px) {
        align-items: center;
        display: flex;
        flex-wrap: nowrap;
        justify-content: center;
    }
}

